feat: let about age and km

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+
+
     
     <!-- LINK JAVASCRIPT -->
-    <script src="/main.js"></script>
+    <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
