fix: ajdust main.js

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-
+<h1 id="prezzobiglietto"></h1>
     
     <!-- LINK JAVASCRIPT -->
     <script type="text/javascript" src="main.js"></script>
